# clamav-desktop

./: .commitlintrc  .editorconfig  .env.example  .eslintrc  .gitignore  .gitmodules  .prettierrc  .swcrc  .yarnrc.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  biome.jsonc  clamd.exe.lnk  codecov.yml  electron-builder.yml  forge.config.js  global.d.ts  index.html  meta.json  mise.toml  package.json  renovate.json  tsconfig.build.json  tsconfig.ci.json  tsconfig.json  tsconfig.node.json  vite.config.ts  webpack.main.config.js  webpack.plugins.js  webpack.renderer.config.js  webpack.rules.js
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  pull_request_template.md  release-drafter.yml  renovate.json
.github/workflows/: analysis.yml  build.yml  build_with_clamav.yml  bundle.yml  bundle_with_clamav.yml  check.yml  codeql.yml  core.yml  e2e.yml  integration.yml  main.yml  release.yml  unit.yml  webview.yml
.husky/: commit-msg  pre-commit
.storybook/: main.ts  preview.css  preview.tsx  screen.css
.storybook/argsStore/: ArgsStore.ts  constants.ts  index.ts  types.ts  useArgsStoreArgs.ts
.storybook/story-components/: ScreenStoryBox.tsx
assets/deb/: com.clamav-desktop.app.next.policy  com.clamav-desktop.app.policy  postinstall.sh  template.desktop
assets/icons/: icon.icns
assets/msi/: postinstall.nsi
assets/pkg/: postinstall.sh
common/: common.d.ts
common/helpers/: handleError.ts
configs/: clamd.conf  jest.config.js  wdio.config.ts
daemon/: Cargo.toml  Makefile
daemon/src/: main.rs  state.rs  types.rs
daemon/src/actions/: get_status.rs  mod.rs  ping.rs  run_find_command.rs
docs/: animations.html
docs/contributors/: tauri.md
e2e/: start.spec.ts  tsconfig.json
main/: index.ts  preload.ts
main/libs/: ClamDaemon.ts  ClamScan.ts  Clamd.ts  FreshClam.ts
public/: index.html
renderer/: App.tsx  global.d.ts  index.html
renderer/atoms/: Logger.tsx
renderer/molecules/: Toaster.tsx
renderer/pages/: Cloud.tsx  Dashboard.tsx  Scanner.tsx
scripts/: build_linux_debian.sh  getClamavVersion.js  print_clamav_version.js
scripts/dev/: clean_paths.js  generate_debian_service_security_report.sh  install_deb_bundle.sh  install_debian_aarch64_requirements.sh  install_debian_requirements.sh  install_debian_service.sh  install_macos_requirements.sh  install_macos_service.sh  install_msi_bundle.ps1  install_windows_service.ps1  lint_permissions.js  log_debian_service.sh  log_linux_service.sh  log_macos_service.sh  log_windows_service.ps1  post_install.js  prune.js  uninstall_debian_service.sh  uninstall_linux_service.sh  uninstall_macos_service.sh  uninstall_msi_bundle.ps1  uninstall_windows_service.ps1  watch.js
sidecars/: .gitignore  Cargo.toml
sidecars/src/: clamd.rs  clamscan.rs  common.rs  freshclam.rs
src/: App.test.tsx  App.tsx  Layout.tsx  constants.ts  global.css  index.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/clamav-desktop-daemon/: Cargo.toml
src-tauri/cli/: Cargo.toml
src-tauri/cli/src/: error.rs  lib.rs
src-tauri/cli/tests/: test_exec.rs  test_is_installed.rs  test_run.rs
src-tauri/common/: Cargo.toml
src-tauri/common/src/: lib.rs  utils.rs
src-tauri/common/tests/: as_string_test.rs  as_strings_test.rs
src-tauri/config/: Cargo.toml
src-tauri/config/src/: clamscan.rs  constants.rs  freshclam.rs  lib.rs
src-tauri/config/tests/: test_clamscan_read.rs  test_clamscan_write.rs
src-tauri/dev/: Cargo.toml
src-tauri/dev/src/: lib.rs
src-tauri/embeds/deb/: clamav-desktop-daemon.service  com.clamav-desktop.app.next.policy  com.clamav-desktop.app.policy  postinst  prerm
src-tauri/embeds/macos/: com.clamav-desktop.daemon.plist
src-tauri/fast-cli/: Cargo.toml
src-tauri/fast-cli/src/: main.rs
src-tauri/filer/: Cargo.toml
src-tauri/filer/src/: drive.rs  file_explorer.rs  file_list.rs  lib.rs  types.rs  utils.rs
src-tauri/filer/tests/: drive_test.rs  file_explorer_test.rs  list_test.rs  normalize_path_test.rs  utils.rs
src-tauri/filer/tests/drive/: list.rs
src-tauri/filer/tests/file_list/: list.rs
src-tauri/filer/tests/utils/: main.rs  normalize_path.rs
src-tauri/jest/: Cargo.toml
src-tauri/jest/src/: inner.rs  lib.rs
src-tauri/jest/tests/: assert_ends_with_test.rs  assert_is_less_than_test.rs  to_be_greater_than_or_equal_test.rs  to_be_greater_than_test.rs  to_be_less_than_or_equal_test.rs  to_be_less_than_test.rs  to_be_test.rs  to_end_with_test.rs  to_start_with_test.rs
src-tauri/resources/: freshclam-1.4.0.conf  meta.json
src-tauri/src/: cloud.rs  commands.rs  commands_legacy.rs  daemon.rs  globals.rs  lib.rs  main.rs  scanner.rs
src-tauri/src/cloud/: commands.rs  state.rs  utils.rs
src-tauri/src/copilot/: commands.rs  constants.rs  mod.rs  state.rs
src-tauri/src/core/: state.rs
src-tauri/src/dashboard/: commands.rs  mod.rs  state.rs  utils.rs
src-tauri/src/libs/: cli.rs  cli_test.rs  file.rs  file_test.rs  helpers.rs  logger.rs  mod.rs  test.rs  test_test.rs  utils.rs
src-tauri/src/modules/: mod.rs  window.rs
src-tauri/src/modules/cloud/: commands.rs  state.rs  types.rs  utils.rs
src-tauri/src/modules/file_manager/: commands.rs
src-tauri/src/modules/scanner/: commands.rs  mod.rs  state.rs  utils.rs
src-tauri/src/scanner/: commands.rs  state.rs  utils.rs
src-tauri/src/settings/: commands.rs  state.rs  utils.rs  utils_test.rs
src-tauri/src/system/: tray.rs  window.rs
src/atoms/: Main.tsx
src/components/: Card.tsx  KeyValueList.tsx  Toaster.tsx
src/core/: README.md  types.ts
src/elements/: Button.tsx  CircularSpinner.tsx  LegacyScanningSpinner.tsx  LoadingSpinner.tsx  Logger.tsx  ScanningSpinner.tsx
src/helpers/: reportWebVitals.ts
src/hooks/: useCachedState.ts  useDebouncedMemo.ts  useForceUpdate.ts  useInterval.ts  usePrevious.ts
src/layouts/: Screen.tsx  ScreenBox.tsx  TitleBar.tsx
src/modules/: README.md
src/pages/: Cloud.tsx  Dashboard.tsx  Scanner.tsx
typings/: expect.d.ts
(+82 files in other folders)
