[package]
name = "clamav-desktop-daemon"
description = "ClamAV Dektop antivirus daemon service."
license = "AGPL-3.0"
version = "0.3.24"
publish = false

edition = "2021"
rust-version = "1.86"

[dependencies]
cuid = "1.3.3"
futures-channel = "0.3.30"
futures-util = "0.3.30"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.26.0"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.0"
