[package]
name = "clamav-desktop-daemon"
description = "ClamAV Dektop antivirus daemon service."
license = "AGPL-3.0"
version = "0.3.24"
publish = false

edition = "2024"
rust-version = "1.93"

[dependencies]
cuid = "1.3.3"
futures-channel = "0.3.32"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.28.0"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.0"
