[package]
name = "clamav-desktop"
description = "A cross-platform desktop GUI for ClamAV antivirus."
license = "AGPL-3.0"
version = "0.3.24"
publish = false

default-run = "clamav-desktop"
edition = "2021"
rust-version = "1.80"

authors = ["Ivan Gabriele"]
homepage = "https://github.com/ivangabriele/clamav-desktop"
repository = "https://github.com/ivangabriele/clamav-desktop.git"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = ["cli", "common", "config", "dev", "fast-cli", "filer"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
chrono = "0.4.38"
cli = { path = "./cli" }
config = { path = "./config" }
cuid = "1.3.3"
dev = { path = "./dev" }
filer = { path = "./filer" }
futures-util = "0.3.30"
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tauri = { version = "2.0.0-rc", features = ["tray-icon", "image-png", "unstable"] }
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-http = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-process = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
tokio-util = "0.7.11"
walkdir = "2.5.0"

[dev-dependencies]
jrest = "0.2.3"
mockall = "0.13.0"

[package.metadata.deb]
copyright = "2022-present, Ivan Gabriele <ivan.gabriele@gmail.com>"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc"
