[package]
name = "clamav-desktop"
description = "A cross-platform desktop GUI for ClamAV antivirus."
license = "AGPL-3.0"
version = "0.3.24"
publish = false

default-run = "clamav-desktop"
edition = "2021"
rust-version = "1.86"

authors = ["Ivan Gabriele"]
homepage = "https://github.com/ivangabriele/clamav-desktop"
repository = "https://github.com/ivangabriele/clamav-desktop.git"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clamav_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# [features]
# # this feature is used for production builds or when `devPath` points to the filesystem
# # DO NOT REMOVE!!
# custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = ["cli", "common", "config", "dev", "fast-cli", "filer"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
chrono = "0.4.38"
cli = { path = "./cli" }
config = { path = "./config" }
cuid = "1.3.3"
dev = { path = "./dev" }
filer = { path = "./filer" }
futures-util = "0.3.31"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tauri = { version = "2.1.1", features = ["tray-icon", "image-png", "unstable"] }
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-fs = "2.0.3"
tauri-plugin-http = "2.0.3"
tauri-plugin-notification = "2.0.1"
tauri-plugin-os = "2.0.1"
tauri-plugin-process = "2.0.1"
tauri-plugin-shell = "2.0.2"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tokio-util = "0.7.12"
walkdir = "2.5.0"

[dev-dependencies]
jrest = "0.2.3"
mockall = "0.13.0"

[package.metadata.deb]
copyright = "2022-present, Ivan Gabriele <ivan.gabriele@protonmail.com>"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.1"
