[package]
name = "clamav-desktop"
description = "A cross-platform desktop GUI for ClamAV antivirus."
license = "AGPL-3.0"
version = "0.3.24"
publish = false

default-run = "clamav-desktop"
edition = "2024"
rust-version = "1.93"

authors = ["Ivan Gabriele"]
homepage = "https://github.com/ivangabriele/clamav-desktop"
repository = "https://github.com/ivangabriele/clamav-desktop.git"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clamav_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# [features]
# # this feature is used for production builds or when `devPath` points to the filesystem
# # DO NOT REMOVE!!
# custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = ["cli", "common", "config", "dev", "fast-cli", "filer"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = "0.4.44"
cli = { path = "./cli" }
config = { path = "./config" }
cuid = "1.3.3"
dev = { path = "./dev" }
filer = { path = "./filer" }
futures-util = "0.3.32"
hickory-resolver = "0.25.2"
regex = "1.12.3"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = ["image-png", "tray-icon", "unstable"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2.5.7"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.18"
walkdir = "2.5.0"
whoami = "2.1.1"

[dev-dependencies]
jrest = "0.2.3"
mockall = "0.14.0"

[package.metadata.deb]
copyright = "2022-present, Ivan Gabriele <ivan.gabriele@protonmail.com>"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.0", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
