[package]
name = "cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
colored = "3.0.0"
common = { path = "../common" }
tokio = { version = "1.41.0", features = ["full"] }

[dev-dependencies]
dev = { path = "../dev" }
jrest = "0.2.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
