[package]
name = "filer"
version = "0.1.0"
edition = "2021"

[dependencies]
cli = { path = "../cli" }
common = { path = "../common" }
glob = { git = "https://github.com/rust-lang/glob", branch = "master" }
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
dev = { path = "../dev" }
jrest = "0.2.3"
