[package]
name = "filer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cli = { path = "../cli" }
common = { path = "../common" }
glob = { git = "https://github.com/rust-lang/glob", branch = "master" }
serde = { version = "1.0.209", features = ["derive"] }

[dev-dependencies]
dev = { path = "../dev" }
jrest = "0.2.3"
